--- a/app/package.json
+++ b/app/package.json
@@ -30,7 +30,7 @@
     "react-scripts": "^3.4.3"
   },
   "devDependencies": {
-    "@firebase/testing": "^0.20.7",
+    "@firebase/rules-unit-testing": "^1.3.16",
     "@testing-library/react-hooks": "^3.4.1",
     "firebase-tools": "^12.4.2",
     "husky": "^4.2.5",
