--- a/export-script/package.json
+++ b/export-script/package.json
@@ -16,8 +16,8 @@
     "json2csv": "^5.0.1"
   },
   "devDependencies": {
-    "@firebase/testing": "^0.20.7",
+    "@firebase/rules-unit-testing": "^1.3.6",
     "firebase-tools": "^13.6.0",
-    "jest": "^25.0.0"
+    "jest": "^27.5.1"
   }
 }
