--- a/app/package.json
+++ b/app/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts --openssl-legacy-provider build",
+    "start": "vite",
+    "build": "vite build",
     "test": "TZ=UTC firebase emulators:exec --only firestore 'react-scripts test'",
     "test-ci": "TZ=UTC CI=true firebase emulators:exec --only firestore 'react-scripts test --runInBand'",
     "test-nowatch": "TZ=UTC firebase emulators:exec --only firestore 'react-scripts test --watchAll=false'",
-    "eject": "react-scripts eject",
-    "format": "prettier --write 'src/' 'firestore/'",
-    "format-check": "prettier --check 'src/' 'firestore/'",
+    "eject": "vite eject",
+    "format": "prettier --write src/ firestore/",
+    "format-check": "prettier --check src/ firestore/",
     "test-firestore": "firebase emulators:exec --only firestore 'jest firestore/'"
   },
   "dependencies": {
@@ -26,17 +26,18 @@
     "react": "^16.13.1",
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
-    "react-input-mask": "^2.0.4",
-    "react-scripts": "^3.4.3"
+    "react-input-mask": "^2.0.4"
   },
   "devDependencies": {
     "@firebase/rules-unit-testing": "^1.3.16",
     "@testing-library/react-hooks": "^3.4.1",
+    "@vitejs/plugin-react": "^5.0.3",
     "firebase-tools": "^13.6.0",
     "husky": "^4.2.5",
     "mutationobserver-shim": "^0.3.7",
     "prettier": "^2.5.1",
-    "react-test-renderer": "^16.13.1"
+    "react-test-renderer": "^16.13.1",
+    "vite": "^7.1.7"
   },
   "husky": {
     "hooks": {
