--- a/app/package.json
+++ b/app/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "vite",
-    "build": "vite build",
-    "test": "TZ=UTC firebase emulators:exec --only firestore 'react-scripts test'",
-    "test-ci": "TZ=UTC CI=true firebase emulators:exec --only firestore 'react-scripts test --runInBand'",
-    "test-nowatch": "TZ=UTC firebase emulators:exec --only firestore 'react-scripts test --watchAll=false'",
-    "eject": "vite eject",
+    "start": "react-scripts",
+    "build": "react-scripts build",
+    "test": "cross-env TZ=UTC firebase emulators:exec --only firestore 'react-scripts test'",
+    "test-ci": "cross-env TZ=UTC CI=true firebase emulators:exec --only firestore -- 'react-scripts test --runInBand'",
+    "test-nowatch": "cross-env TZ=UTC firebase emulators:exec --only firestore 'react-scripts test --watchAll=false'",
+    "eject": "react-scripts eject",
     "format": "prettier --write src/ firestore/",
     "format-check": "prettier --check src/ firestore/",
     "test-firestore": "firebase emulators:exec --only firestore 'jest firestore/'"
@@ -20,6 +20,7 @@
     "@testing-library/jest-dom": "^5.11.1",
     "@testing-library/react": "^10.4.7",
     "@testing-library/user-event": "^12.0.12",
+    "cross-env": "^10.1.0",
     "date-fns": "^2.15.0",
     "firebase": "^8.0.0",
     "formik": "^2.1.5",
@@ -37,7 +38,7 @@
     "mutationobserver-shim": "^0.3.7",
     "prettier": "^2.5.1",
     "react-test-renderer": "^16.13.1",
-    "vite": "^7.1.7"
+    "react-scripts": "^5.0.1"
   },
   "husky": {
     "hooks": {
