--- a/app/package.json
+++ b/app/package.json
@@ -9,8 +9,8 @@
     "test-ci": "TZ=UTC CI=true firebase emulators:exec --only firestore 'react-scripts test --runInBand'",
     "test-nowatch": "TZ=UTC firebase emulators:exec --only firestore 'react-scripts test --watchAll=false'",
     "eject": "react-scripts eject",
-    "format": "prettier --write 'src/' 'firestore/'",
-    "format-check": "prettier --check 'src/' 'firestore/'",
+    "format": "prettier --write src/ firestore/",
+    "format-check": "prettier --check src/ firestore/",
     "test-firestore": "firebase emulators:exec --only firestore 'jest firestore/'"
   },
   "dependencies": {
